# face_auth_test

./: pyproject.toml
app/: main.py
app/auth/model/: permission.py  role.py  user.py
app/auth/model/association/: role_permission_association.py  user_role_association.py
app/auth/repository/: role.py  user.py
app/auth/router/: user.py
app/auth/schemas/: permission.py  role.py  user.py
app/auth/services/: user.py
app/auth/utils/: jwt_tokens.py
app/core/: base_crud.py  schemas.py  setting.py
app/core/mixin/: int_id_ky.py
